<resources>
    <string name="app_name">UnifyPay</string>
    <string name="permissions_button_label">request permissions</string>
    <string name="action_button_label">run action</string>
    <string name="transaction_type">Type</string>
    <string name="bankName">Bank name</string>
    <string name="pay">Pay offline</string>
    <string name="phoneNumber">Phone number</string>
    <string name="setphoneNumber">Set Phone number</string>
    <string name="amount">Amount</string>
    <string name="accountNumber">Account number</string>
    <string name="others">Others\t</string>
    <string name="self">Self\t</string>
    <string name="save">Save\t</string>
    <string name="dont_save">Don\'t save\t</string>
    <string name="profile">Profile</string>
    <string name="permission_note">Next, we need your permission to make UnifyPay work seamlessly</string>
    <string name="permission">Permit</string>
    <string name="select_bank">Select Bank</string>
    <string name="bank">Bank</string>
    <string name="repeat">Repeat</string>
    <string name="welcome_note">Hello, click the button to make a transaction</string>
    <string name="new_transaction">New Transaction</string>
    <string name="go_home">Go Home</string>
    <string name="repeat_transaction">Repeat Transaction</string>
    <string name="ussd">Add Ussd</string>
    <string name="send_money">Send Money</string>
    <string name="buy_data">Buy Data</string>
    <string name="get_data_bundle">Get data bundles</string>
    <string name="verify_account">Verify account</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="sending_money">Sending Money</string>
    <string name="buying_data">Buying Data</string>
    <string name="buying_airtime">Buying Airtime</string>
    <string name="enter_valid_phone_amount">Please enter a valid phone number and amount</string>
    <string name="enter_valid_amount">Please enter an amount</string>
    <string name="enter_valid_phone">Please enter a valid phone number</string>
    <string name="enter_valid_account_amount">Please enter a valid account number and amount</string>
    <string name="delete_saved_transaction_prompt">You are about to delete this saved transaction</string>
    <string name="sim">Sim</string>
    <string name="internet_needed">Internet is required for this setup.\nJust one time..promise 😃</string>
    <string name="setup">Setup</string>
    <string name="setup_done">Setup complete!\nNow check your profile to select your default</string>
    <string name="data_bundle">Data Bundle</string>
    <string name="other_banks">Other banks\t</string>
    <string name="to">to %1$s\t</string>
    <string name="balance">Balance</string>
    <string name="account_balance">Account Balance</string>
    <string name="empty"> </string>
    <string name="voice">Voice</string>
    <string name="voice_title">Enable voice help</string>
</resources>
